# image_processor

./: .gitignore  CMakeLists.txt  exceptions.cpp  exceptions.h  image.cpp  image.h  image_processor  main.cpp  parse.cpp  parse.h  processor.cpp  processor.h
filters/: base.cpp  base.h  blur.cpp  blur.h  crop.cpp  crop.h  crystallize.cpp  crystallize.h  edge.cpp  edge.h  grayscale.cpp  grayscale.h  negative.cpp  negative.h  sharpening.cpp  sharpening.h
test_script/: test.cpp
